2007-05-18  Don Porter  <dgp@users.sourceforge.net>

	* unix/configure:       autoconf-2.59 (FC6 fork)
	* win/configure:

	* README:               Bump version number to 8.5a7
	* generic/tk.h:
	* library/tk.tcl:
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure.in:

	* tests/ttk/treetags.test:	Another bit of test suite
	SCIM-tolerance. [Bug 1609316]

2007-05-17  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tk.decls: workaround 'make checkstubs' failures from
	tkStubLib.c MODULE_SCOPE revert. [Bug 1716117]

	* macosx/Wish.xcodeproj/project.pbxproj: add tkOldTest.c and remove
						 tkStubImg.c.

2007-05-16  Joe English  <jenglish@users.sourceforge.net>

	* generic/tkStubLib.c:  Change Tk_InitStubs(), tkStubsPtr,
	and the auxilliary stubs table pointers back to public visibility.
	See [Bug 1716117] for details.

	Removed TCL_STORAGE_CLASS monkey business, as it had no effect.

2007-05-16  Don Porter  <dgp@users.sourceforge.net>

	* library/choosedir.tcl:	Removed uses of obsolete {expand}
	* library/comdlg.tcl:		syntax; replaced with the now
	* library/tk.tcl:		approved {*}.  [Bug 1710633]
	* tests/canvImg.test:
	* tests/imgPhoto.test:

	* tests/bind.test:    Make test suite more SCIM-tolerant. [Bug 1609316]

2007-05-16  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/makefile.vc: Test ttk widgets.

2007-05-15  Joe English  <jenglish@users.sourceforge.net>

	* unix/tkUnixRFont.c: Fix crash introduced by previous fix
	exposed under newer fontconfig libraries [Bug 1717830] again.

2007-05-15  Don Porter  <dgp@users.sourceforge.net>

	* generic/tkGrid.c: Stop crash due to list intrep shimmer [Bug 1677608]

2007-05-15  Joe English  <jenglish@users.sourceforge.net>

	* unix/tkUnixRFont.c: Fix various memory leaks [Bug 1717830],
	[Bug 800149].

2007-05-14  Don Porter  <dgp@users.sourceforge.net>

	[Tk Bug 1712081]

	* unix/Makefile.in:	Updates to account for new and deleted files
	* win/Makefile.in:	tkStubImg.c and tkOldTest.c.
	* win/makefile.bc: